--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "dependencies": {
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.12.0",
+    "@nuxtjs/firebase": "^6.1.1",
+    "firebase": "^7.17.2",
     "nuxt": "^2.13.0"
   },
   "devDependencies": {
